# euler

./: .gitignore  dune-project  euler.install  euler.opam
legacy/: param.ml  param.mli
legacy/selfpower/: selfpower.ml  selfpower.mli
legacy/services/: multicore_range.mli  range_processing.ml  setting.ml
src/: dune  euler48.ml  param.ml  param.mli  screen.ml  screen.mli
src/euler48/: dune  euler.ml
src/selfpower/: distributed_range.ml  distributed_range.mli  dune  positive_number.ml  positive_number.mli  selfpower.ml  selfpower.mli
src/services/: distributed_range.ml  dune  monocore_range.ml  multicore_range.ml  multicore_range.mli  range_processing.ml  setting.ml  setting.mli
test/: dune  testselfpower.ml
