(lang dune 1.10)
(name euler)
(version "0.1")
(source (github aldrikfr/euler))
(license ISC)
(authors "Aldrik KLEBER")
(maintainers "contact@aldrik.net")
(generate_opam_files true)
(using fmt 1.2)

(package
 (name euler)
 (synopsis "Solve puzzle euler 48")
 (description "Solve puzzle 48 using arbitrary size number and parallel computing")
 (depends
  (ocaml (>= 4.02))
  (zarith (>= 1.9))
  (range (>= 0.8))
  (functory  (>= 0.6))
  (base (>= 0.11 ))
  (stdio (>= 0.11))
  (dune (>= 1.11))
  (ounit :with-test)
  ))
